--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,7 +14,7 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://bigota.d.miui.com/V11.0.3.0.QEECNXM/miui_MIMIX3_V11.0.3.0.QEECNXM_4d73488207_10.0.zip
+  ROM_URL: https://bigota.d.miui.com/V11.0.1.0.QCNCNXM/miui_OLIVE_V11.0.1.0.QCNCNXM_f95f98fba9_10.0.zip
   ROM_NAME: MIUI
   TZ: Asia/Shanghai
 
