--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,7 +14,7 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://bigota.d.miui.com/V11.0.1.0.QCNCNXM/miui_OLIVE_V11.0.1.0.QCNCNXM_f95f98fba9_10.0.zip
+  ROM_URL: http://bigota.d.miui.com/V12.0.2.0.QFCCNXM/miui_PYXIS_V12.0.2.0.QFCCNXM_b122bf39b6_10.0.zip
   ROM_NAME: MIUI
   TZ: Asia/Shanghai
 
