--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,7 +14,7 @@ on:
     types: [started]
     
 env:
-  ROM_URL: http://bigota.d.miui.com/V12.0.1.0.QEACNXM/miui_MI8_V12.0.1.0.QEACNXM_a855357838_10.0.zip
+  ROM_URL: http://bigota.d.miui.com/V12.0.2.0.QFBCNXM/miui_GRUS_V12.0.2.0.QFBCNXM_7bd5791743_10.0.zip
   ROM_NAME: MIUI
   TZ: Asia/Shanghai
 
