--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,8 +14,8 @@ on:
     types: [started]
     
 env:
-  ROM_URL: http://bigota.d.miui.com/V12.0.1.0.QEACNXM/miui_MI8_V12.0.1.0.QEACNXM_a855357838_10.0.zip
-  ROM_NAME: MIUI
+  ROM_URL: https://dl.google.com/dl/android/aosp/blueline-ota-qq3a.200805.001-4e00f93a.zip
+  ROM_NAME: Pixel
   TZ: Asia/Shanghai
 
 jobs:
