--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,8 +14,8 @@ on:
     types: [started]
     
 env:
-  ROM_URL: http://bigota.d.miui.com/V12.0.2.0.QGGCNXM/miui_BEGONIA_V12.0.2.0.QGGCNXM_972f66522c_10.0.zip
-  ROM_NAME: MIUI
+  ROM_URL: https://dl.google.com/dl/android/aosp/blueline-qq3a.200805.001-factory-1ba5d2c2.zip
+  ROM_NAME: Pixel
   TZ: Asia/Shanghai
 
 jobs:
